--- a/index.html
+++ b/index.html
@@ -3,8 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="ScrutaNet - An open-source multi-threaded distributed password cracking system with server GUI, server CLI, and client CLI.">
+  <meta name="theme-color" content="#ff9800">
+  
+  <!-- Open Graph Tags for social sharing -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://scrutanet.plancksoft.net">
+  <meta property="og:title" content="ScrutaNet">
+  <meta property="og:description" content="An open-source multi-threaded distributed password cracking system. Includes server GUI, server CLI, and client CLI for distributed hash-cracking tasks.">
+  <meta property="og:image" content="https://scrutanet.plancksoft.net/images/ScrutaNet.png">
+  <meta property="og:image:width" content="400">
+  <meta property="og:image:height" content="400">
+  
+  <!-- Twitter Card Tags -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:url" content="https://scrutanet.plancksoft.net">
+  <meta name="twitter:title" content="ScrutaNet">
+  <meta name="twitter:description" content="An open-source multi-threaded distributed password cracking system.">
+  <meta name="twitter:image" content="https://scrutanet.plancksoft.net/images/ScrutaNet.png">
+  
   <title>ScrutaNet</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" type="image/png" href="images/ScrutaNet.png">
   <script src="js/script.js" defer></script>
 </head>
 <body>
