Fixed logo size and location.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
     </nav>
   </header>
 
+  <img src="images/ScrutaNet.png" alt="ScrutaNet Logo" class="logo-main" />
+
   <section id="about">
     <h2>About ScrutaNet</h2>
     <p>ScrutaNet is an open-source multi-threaded distributed password cracking system. It includes server GUI, server CLI, and client CLI for distributed hash-cracking tasks.</p>
@@ -72,9 +74,6 @@
 
   <section id="preview">
     <h2>Screenshots & Preview</h2>
-    
-    <h3>Logo</h3>
-    <img src="images/ScrutaNet.png" alt="ScrutaNet Logo" />
     
     <h3>Server GUI</h3>
     <img src="images/ServerGUI.png" alt="Server GUI screenshot" />
